--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,330 @@
+/* 
+--------------------------
+CSS INDEX
+===================
+
+00. Reset
+01. Theme default CSS
+02. Header
+03. Hero
+04. Footer
+
+-----------------------------------------------------------------------------------*/
+/*===========================
+      00.Reset css 
+===========================*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+	display: block;
+}
+body {
+	line-height: 1;
+	height: 100%;
+	background-color: var(--primary-cyan);
+}
+ol,
+ul {
+	list-style: none;
+}
+blockquote,
+q {
+	quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*===========================
+      01.COMMON css 
+===========================*/
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=PT+Serif:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive&family=Lato:wght@400;700;900&family=Lora:wght@400;500;700&family=Rubik+Mono+One&display=swap');
+
+:root {
+	--primary-white: #f6f3ed;
+	--primary-red: rgb(255, 65, 54);
+	--primary-orange: rgb(255, 179, 64);
+	--primary-yellow: rgb(255, 212, 38);
+	--primary-green: rgb(49, 222, 75);
+	--primary-mint: rgb(102, 212, 207);
+	--primary-teal: rgb(93, 230, 255);
+	--primary-cyan: rgb(112, 215, 255);
+	--primary-blue: rgb(64, 156, 255);
+	--primary-indigo: rgb(125, 122, 255);
+	--primary-purple: rgb(125, 122, 255);
+	--primary-pink: rgb(255, 58, 95);
+	--primary-brown: rgb(181, 148, 105);
+	--primary-light-grey: rgb(244, 244, 244);
+	--primary-grey: rgb(152, 152, 157);
+	--primary-dark-grey: rgb(97, 97, 101);
+	--primary-dark: rgb(0, 0, 0);
+	--primary-text: rgb(17, 46, 81);
+}
+
+/* * {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+} */
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+html {
+	/* this makes sure the padding and the border is included in the box sizing */
+	box-sizing: border-box;
+	overflow-x: hidden;
+}
+
+html body {
+	padding: 0;
+	margin: 0;
+	overflow-y: inherit;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+
+	/* Color scheme */
+
+	--textcolor: #121212;
+	--bgcolor: #fff;
+	--highlight: #2749c9;
+}
+
+@media (prefers-color-scheme: dark) {
+	* {
+		--textcolor: #dadada;
+		--bgcolor: #141414;
+		--highlight: #ffc600;
+	}
+}
+
 .App {
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	font-family: 'Lato', sans-serif !important;
+	font-weight: normal;
+	font-style: normal;
+	font-size: 1rem;
+	text-align: justify;
+	color: var(--primary-text);
+	z-index: 1;
+	margin: 0 auto;
 }
 
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
+img {
+	max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+* a {
+	text-decoration: none !important;
+	color: var(--primary-text) !important;
 }
 
-.App-header {
-	background-color: #282c34;
+a:focus,
+input:focus,
+textarea:focus,
+button:focus {
+	text-decoration: none;
+	outline: none;
+}
+
+a:focus,
+a:hover {
+	text-decoration: none;
+}
+
+i,
+span,
+a {
+	display: inline-block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Rubik Mono One', sans-serif;
+	color: var(--primary-text);
+	margin: 0px;
+}
+
+ul,
+ol {
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+}
+
+.component-wrapper {
+	position: relative;
 	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
 }
 
-.App-link {
-	color: #61dafb;
+.heading {
+	text-transform: uppercase;
+	font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
+.section-heading {
+	text-align: center;
+}
+
+.brand {
+	font-size: 1.75rem;
+	text-align: center;
+	margin: 1rem 0;
+	color: var(--primary-white);
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: var(--primary-mint);
+}
+
+.highlight {
+	font-weight: bold;
+	color: var(--highlight);
+	text-shadow: 0 0.1rem 0.01rem rgba(255, 0, 0.8);
+}
+
+.sub-heading,
+.nav-link {
+	font-weight: 600;
+	margin: 0;
+}
+
+.secondary-heading {
+	font-weight: 600;
+	font-size: 1.3rem;
+}
+
+.secondary-font {
+	font-family: 'PT serif', serif;
+}
+
+.bg_cover {
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+}
+
+@media screen and (max-width: 2768px) {
+	body {
+		overflow-x: hidden;
 	}
 }
